--- a/flaskApp/templates/form.html
+++ b/flaskApp/templates/form.html
@@ -32,11 +32,11 @@
             <form action="/crearFormulario" method="POST">
               <div class="form-group">
                 <label for="inputTexto1">Your address:</label>
-                <input type="text" class="form-control" id="inputTexto1" placeholder="Ingrese el primer texto">
+                <input type="text" class="form-control" id="inputTexto1" placeholder="0x...">
               </div>
               <div class="form-group">
                 <label for="inputTexto2">Your spousse address:</label>
-                <input type="text" class="form-control" id="inputTexto2" placeholder="Ingrese el segundo texto">
+                <input type="text" class="form-control" id="inputTexto2" placeholder="0x...">
               </div>
               <a type="submit" class="send options btn btn-primary mb-3">Send</a>
             </form>
